2010-11-13 Roman
- DAQ.ModBus: Parameters reenable at controller start is added for data blocks changings apply. Mostly for removed attributes apply.


2010-11-11 Roman
- UI.VCAEngine: Context help and syntax highlighting is added for main attributes of a widget.


2010-11-09 Maxim
- UI.VCAEngine: Tooltip for the elements' list of the primitive ElFigure is added.


2010-11-08 Roman
- !!:UI.VCAEngine: Sepecific properties, like help and syntax highlighting, is added to attributes, specified by primitive.
    Syntax highlight is added for primitives "ElFigure" and "Document".
- !!:UI.Vision: Help display for widget's attributes is added.
- !!:UI.Vision: Syntax highlighting display for widget's attributes is added.


2010-11-05 Roman
- !!:UI.QTCfg: Manual resizing for hight is added to text and table fields. Resizing is made by hold and move bottom border the fields.


2010-11-04 Roman
- FIX:DAQ.OPC_UA: Check for attributes delete is added on a parameter enable.
- DAQ.JavaLikeCalc, UI.QTCfg, UI.Vision: Multi-level syntax higlight support is added.


2010-11-03 Roman
- FIX:DAQ.OPC_UA: One request limit for "Read" is set to 25 nodes. Parameter's attributes processing is set on first call at start.
- SYS, UI.QTStarter: Update splash for show work status.
- DAQ.BlockCalc, DAQ.ModBus, DAQ.OPC_UA: Syntax highlight is added for a parameter configuration.
- FIX:DAQ.JavaLikeCalc, UI.QTCfg, UI.Vision: JavaScript syntax higlight is fixed for known bugs.
- FIX:DAQ.OPC_UA: Delete attributes from a parameter is missed on the parameter disable.


2010-11-02 Roman
- !!!!:SYS, DAQ.JavaLikeCalc, UI.QTCfg, UI.VCAEngine, UI.Vision: The syntax highlight API is added.
- SYS.XMLNode: Copy constructor is added.
- FIX:SYS: Start scripts "openscada_start" and "openscada_demo" and "openscada_demo_local" is fixed for direct bash call.
- FIX:DB.MySQL: Date and time store format is changed to UTC.


2010-10-24 Roman 0.7.0