@@ -31,7 +31,7 @@ AC_PROG_LN_S
 AC_PROG_MAKE_SET
 AC_PROG_LIBTOOL
 
-LT_PREREQ([2.0])
+#LT_PREREQ([2.0])
 
 #Gettext utilites check
 AC_CHECK_PROG(XGETTEXT, xgettext, xgettext, false)
@@ -160,6 +160,8 @@ AC_ARG_ENABLE(OPC_UA,AC_HELP_STRING([--disable-OPC_UA], [disable build module DA
 [ if test $enableval = yes; then ModOPC_UA=true; else ModOPC_UA=false; fi],[ ModOPC_UA=true; ])
 AC_ARG_ENABLE(AMRDevs,AC_HELP_STRING([--disable-AMRDevs], [disable build module DAQ.AMRDevs]),
 [ if test $enableval = yes; then ModAMRDevs=true; else ModAMRDevs=false; fi],[ ModAMRDevs=true; ])
+AC_ARG_ENABLE(BFN,AC_HELP_STRING([--disable-BFN], [disable build module DAQ.BFN]),
+[ if test $enableval = yes; then ModBFN=true; else ModBFN=false; fi],[ ModBFN=true; ])
 #> Archive modules
 AC_ARG_ENABLE(FSArch,AC_HELP_STRING([--disable-FSArch], [disable build module Archive.FSArch]),
 [ if test $enableval = yes; then ModFSArch=true; else ModFSArch=false; fi],[ ModFSArch=true; ])
@@ -353,6 +355,11 @@ if test ${ModAMRDevs} = true; then
     AC_CONFIG_FILES(src/moduls/daq/AMRDevs/Makefile)
     DAQSub_mod="${DAQSub_mod}AMRDevs "
 fi
+if test ${ModBFN} = true; then
+    AC_MSG_RESULT(Build module: DAQ.BFN)
+    AC_CONFIG_FILES(src/moduls/daq/BFN/Makefile)
+    DAQSub_mod="${DAQSub_mod}BFN "
+fi
 #> Archive modules
 AC_SUBST(ArchSub_mod)
 if test ${ModFSArch} = true; then
@@ -413,6 +420,12 @@ if test ${ModVCAEngine} = true; then
     AC_MSG_RESULT(Build module: UI.VCAEngine)
     AC_CONFIG_FILES(src/moduls/ui/VCAEngine/Makefile)
     UISub_mod="${UISub_mod}VCAEngine "
+
+    SAVED_CXXFLAGS=$CXXFLAGS
+    CXXFLAGS="$CXXFLAGS -I$oldincludedir/pcre"
+    AC_CHECK_HEADERS([pcrecpp.h],[],
+	[AC_MSG_ERROR(UI.VCAEngine: PCREcpp header not found. Install or check PCREcpp developing package!)])
+    CXXFLAGS=$SAVED_CXXFLAGS
 fi
 if test ${ModVision} = true; then
     AC_MSG_RESULT(Build module: UI.Vision)
